# ChangeLog for dev-db/sqlite
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.275 2009/09/11 21:16:56 arfrever Exp $

*sqlite-3.6.18 (11 Sep 2009)

  11 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +sqlite-3.6.18.ebuild:
  Version bump. Add support for R-trees (bug #257646). Add "icu" USE flag.

  08 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sqlite-3.6.17.ebuild:
  Add "readline" USE flag (bug #282225).

  05 Sep 2009; Markus Meier <maekke@gentoo.org> sqlite-3.6.16.ebuild:
  amd64 stable, bug #279398

  31 Aug 2009; Brent Baude <ranger@gentoo.org> sqlite-3.6.16.ebuild:
  Marking sqlite-3.6.16 ppc64 for bug 279398

  29 Aug 2009; nixnut <nixnut@gentoo.org> sqlite-3.6.16.ebuild:
  ppc stable #279398

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org> sqlite-3.6.16.ebuild:
  Stable on alpha, bug #279398

  20 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sqlite-3.6.17.ebuild:
  Fix building when dev-lang/tcl isn't installed (bug #281294).

  17 Aug 2009; Jeroen Roovers <jer@gentoo.org> sqlite-3.6.16.ebuild:
  Stable for HPPA (bug #279398).

  14 Aug 2009; Christian Faulhammer <fauli@gentoo.org> sqlite-3.6.16.ebuild:
  stable x86, bug 279398

  12 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sqlite-3.6.17.ebuild, +files/sqlite-3.6.17-fix_installation.patch:
  Don't rebuild SQLite in src_install().

*sqlite-3.6.17 (10 Aug 2009)

  10 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -sqlite-3.6.13.ebuild, -sqlite-3.6.15.ebuild, +sqlite-3.6.17.ebuild:
  Version bump.

  27 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sqlite-3.6.16.ebuild, +files/sqlite-3.6.16-tkt3922.test.patch:
  Disable failing tests which were absent in previous versions. Don't check
  FEATURES (bug #278870).
