@@ -16,7 +16,7 @@ DIST sqlite_docs_3_6_17.zip 2418652 RMD160 5552d3eace7817ac760db13a92cd323373674
 DIST sqlite_docs_3_6_18.zip 2433086 RMD160 a9be84867fec419f576c4ec2f1c8ceefc07bf6ce SHA1 cd8f318cbe1920ffb4490f80bab007d57406487d SHA256 e3e1885c722d117d5663d7c8f1b1ae9ed3f5ab973252f6dabd54a34493f0d830
 EBUILD sqlite-3.6.14.2.ebuild 2503 RMD160 0d6af4c68ea951801618231a848b4024a001eb08 SHA1 5fb37515c5b6c6e83628fe83c1796649523af5f5 SHA256 0b723c2d5dc33abd2bfe66017bab05a05c6f37ec2098815d1f6608a6095694a9
 EBUILD sqlite-3.6.16.ebuild 2534 RMD160 cf137f14d7549856ac6f511417a03d740f7ca14b SHA1 efd0bfd6a745da18290263c951f2904511abbf16 SHA256 dedd6ab4bef4b8a70bb19f86b7d65ae2e1d2d75c7a010ff4dcf2b54c72bc61f2
-EBUILD sqlite-3.6.17.ebuild 2830 RMD160 659d51d7e4493f04cda7edf994b9aecae4d9b578 SHA1 66b4473184e3583b09f195350a5a2aec6fee06c9 SHA256 87a581cc99d5f2d8019fd0fdea58e154de681455d0f05e4793f51f104fc62169
-EBUILD sqlite-3.6.18.ebuild 3332 RMD160 e9e20b4d10a499d3c390f84c13737610c179eca4 SHA1 5639b188de5d7e3c73ea05240f8c927f2e185618 SHA256 d8b96acbbc2d16574f4c243b21c79da0995807d2b984ef480eda047c48b31916
-MISC ChangeLog 37718 RMD160 ec8776915890c8255a7b27f458f6e346027a14e9 SHA1 9f97061b79cf47ae2ac08fb928dfb9269ad4aa98 SHA256 ec838612538faafb52730d2452e4d4c5a919425d845ff0247b8cbbf843a54a8d
+EBUILD sqlite-3.6.17.ebuild 2825 RMD160 d3b6fd534b0243584c1d4799777adb1d2d51de5a SHA1 730a9060692518e3888e5d67e4afa0ff2a7e9fd2 SHA256 69ccc586bdcb041f620196852abd9c0bfc5f7b0d4c5a2cf562d27f90d32e8b2f
+EBUILD sqlite-3.6.18.ebuild 3232 RMD160 2700cc19c86d2973e49d74cdb177241c711ac428 SHA1 d986ed73d33d20cb18ae4bb54626a8a0a9f8a142 SHA256 959411312b4a624dbca9012211fcc72f45f4ac2aa8e98bbc8040fa730fd9a883
+MISC ChangeLog 38022 RMD160 f910175756a90e5c3c5a950cfb17ceb14de1c1ff SHA1 bc669ec1c541e02b48d814ac4d5f39f8142c08e0 SHA256 24277f5a7537ab69d5a2e30c4f754d3e71106aa18029600c9dbf9d9fb48b7c0a
 MISC metadata.xml 577 RMD160 a745dafa141324b8328d6b154f31f1d01dfadd03 SHA1 bb56f3d690313b6fe5aacd5435cfe43cb98c9c7d SHA256 591c8bef421f7fae9a8a0ad17f23cfc44de90f113c39e143adb17ea84925492f
