@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/sqlite-3.6.18.ebuild,v 1.1 2009/09/11 21:16:56 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/sqlite-3.6.18.ebuild,v 1.2 2009/09/18 11:34:58 arfrever Exp $
 
 EAPI="2"
 
@@ -40,9 +40,6 @@ pkg_setup() {
 
 src_prepare() {
 	epatch "${FILESDIR}/${PN}-3.6.16-tkt3922.test.patch"
-
-	# http://www.sqlite.org/src/tktview/65bbb65a47ce115ecb0ea9e1c64c65fb8628f327
-	fperms +x configure
 
 	epatch "${FILESDIR}"/${PN}-3.6.2-interix.patch
 	epatch "${FILESDIR}"/${PN}-3.6.11-interix.patch
