@@ -1,6 +1,15 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.275 2009/09/11 21:16:56 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.278 2009/09/18 03:15:44 jer Exp $
+
+  18 Sep 2009; Jeroen Roovers <jer@gentoo.org> sqlite-3.6.17.ebuild:
+  Stable for HPPA (bug #284340).
+
+  14 Sep 2009; Markus Meier <maekke@gentoo.org> sqlite-3.6.17.ebuild:
+  amd64/arm stable, bug #284340
+
+  14 Sep 2009; Christian Faulhammer <fauli@gentoo.org> sqlite-3.6.17.ebuild:
+  stable x86, bug 284340
 
 *sqlite-3.6.18 (11 Sep 2009)
 
